--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -188,6 +188,7 @@ h2 {
 .main {
   background: #f8f8f8;
   height: 100%;
+  overflow: auto;
   padding: 150px 0; }
 
 .clear {
@@ -202,7 +203,7 @@ body {
   font-family: Poppins; }
 
 .container {
-  width: 900px;
+  width: 1200px;
   background: #fff;
   margin: 0 auto;
   box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05);
@@ -251,14 +252,14 @@ body {
   -ms-transform: translate(-50%, -50%); }
 
 .signup {
-  margin-top: 100px}
+  margin-top: 0px}
 
 .signup-content {
   padding-top: 60px;
   padding-bottom: 60px; }
 
 .signup-form, .signup-image, .signin-form, .signin-image {
-  width: 50%;
+  width: 80%;
   overflow: hidden; }
 
 .signup-image {
@@ -305,8 +306,8 @@ figure {
   color: #222; }
 
 .signup-form {
-  margin-left: 75px;
-  margin-right: 75px;
+  margin-left: 60px;
+  margin-right: 60px;
   padding-left: 34px; }
 
 .register-form {
@@ -541,7 +542,7 @@ label.valid {
     margin-left: 0px;
     margin-right: 0px;
     padding-left: 0px;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
     padding: 0 30px; }
 
   .signin-image {
